src/App.css
:root {
  --green-color: #758a6d;
  --light-blue: #19bae8;
  --pink-color: #e17287;
  --warm-brown: #aa5228;
  --khaki: #f2e6c9;
  --army: #bfc3a4;
  --old-keybord: #cfb989;
  --dark-brown: rgb(61, 44, 36);
  --orange: #c35f2b;
  --black: #0b0e17;
}
@font-face {
  /* font-family: "Neue Kabel ExtraBold", "Neue Kabel ExtraBold Placeholder", sans-serif; */
  font-family: "Neue Kabel ExtraBold";
  src: local("Neue Kabel ExtraBold"),
    url("./assets/fonts/NeueKabel-ExtraBold.otf"), format("opentype");
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Outfit", sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: var(--black);
  width: 100%;
}
.navbar-light .navbar-toggler {
  filter: invert(1);
}
nav.bg-body-tertiary.navbar.navbar-expand-lg.navbar-light.fixed-top p.site-title {
  display: none !important;
}
.__canvas {
  position: absolute;
  z-index: 0;
}
#now {
  filter: hue-rotate(15deg);
  background-image: linear-gradient(135deg, #000000 0%, transparent 100%), url(/src/assets/images/svg-dots.png);
}
button.contact {
  border-radius: 0;
  bottom: 0;
  left: 0;
  font-family: "Neue Kabel ExtraBold";
  font-size: 1.7rem;
  color: var(--warm-brown);
  background-color: #ED2B26;
  border-radius: 100px;
  padding: 8px 16px;
}
button.contact a {
  color: #fff;
}
footer[fixed="bottom"] {
  background: var(--black);
}
.btn-primary {
  border: none;
}
nav.bg-body-tertiary.navbar.navbar-expand-lg.navbar-light.fixed-top.nav-colored {
  transition: background-image 0.5s ease-in-out;
}
.nav-transparent {
  background-color: transparent;
}
nav.bg-body-tertiary.navbar.navbar-expand-lg.navbar-light.fixed-top.nav-colored {
  background-image: linear-gradient(to right, var(--black) 0%, #380624 50%, rgba(255, 255, 255, 0.1) 100%);
}
.navbar-collapse {
  background-image: linear-gradient(to right, var(--black) 0%, #380624 80%, rgba(255,255,255,0.1) 100%);
}
div#now div.bibander {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background: black;
  padding: 11rem;
  border-radius: 60%;
}
nav.bg-body-tertiary.navbar.navbar-expand-lg.navbar-light.fixed-top
  p.site-title {
  display: block;
  margin-right: auto;
  padding: 0;
  font-family: "Outfit", sans-serif;
  font-weight: 200;
}
.icecream {
  border-top: 32px solid #d56973;
  background: #edd996;
  border-bottom: 32px solid #13a49a;
  border-radius: 32px 32px 4.8px 4.8px;
  position: relative;
  float: left;
  height: 29px !important;
  width: 52px !important;
  margin-top: 8px;
  margin-bottom: 8px;
  transform: rotate(45deg) scale(0.7);
  box-sizing: unset;
}
.icecream::before,
.icecream::after {
  content: "";
  position: absolute;
}
.icecream::before {
  height: 76px;
  width: 28px;
  top: -24.8px;
  left: 5.6px;
  border-top: 6px solid rgba(255, 255, 255, 0.3);
  border-left: 6px solid rgba(255, 255, 255, 0.3);
  border-radius: 28px 9.6px 0 0;
  line-height: 16px;
}
.icecream::after {
  background: #d8b991;
  width: 16px;
  height: 32px;
  bottom: -64px;
  left: 19px;
  line-height: 16px;
  border-radius: 0 0 32px 32px;
  /* box-shadow: 0.1em 0 0 #4dbfb7, 0.1em 0.1em 0 #4dbfb7, 0.25em 0 0 #4dbfb7, 0.25em 0.1em 0 #4dbfb7, 0.5em 0 0 #4dbfb7, 0.5em 0.1em 0 #4dbfb7; */
}
.modal-header {
  border-bottom: 1px solid var(--dark-brown);
}
.navbar-light .navbar-brand {
  display: flex;
  align-items: center;
  color: var(--old-keybord);
  gap: 15px;
  margin: 0;
}
.navbar-light .navbar-brand span {
  padding-top: 1rem;
  font-family: "PT Serif", serif;
  font-weight: 800;
  font-size: 35px;
  color: #fff;
}
h2.position-title {
  color: #fff;
  font-family: "Neue Kabel ExtraBold";
  text-align: center;
  font-weight: 800;
  font-size: 34px;
}
.mobile-brand img {
  width: 100%;
}
.navbar-light .navbar-toggler {
  border: none;
  border-color: var(--dark-brown);
  animation-delay: 0.5s;
  box-shadow: none;
}
.navbar-nav {
  text-align: center;
}
.navbar-light .navbar-nav a.nav-link {
  letter-spacing: 1.7px;
  font-family: "Neue Kabel ExtraBold";
}
#root {
  width: 100%;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  /* background-color: var(--warm-brown); */
}
.intro {
  width: 100%;
}
.body-text {
  max-width: 768px;
  margin: 0 auto;
  text-align: center;
  color: #fff;
  font-family: "Neue Kabel ExtraBold";
}
.body-section {
  width: 100%;
  position: relative;
  overflow: hidden;
  /* box-shadow: -5px 18px 25px -15px; */
  transition: all 0.2s ease-out;
  cursor: pointer;
  -ms-interpolation-mode: nearest-neighbor;
  image-rendering: -moz-crisp-edges;
  image-rendering: pixelated;
}
.body-section:before {
  content: "";
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  height: 100%;
  width: 400%;
  /* background: repeat-x 100% 0/50% 100% radial-gradient(circle at 50% 0, transparent 25%, #f2e6c9 65%);
  animation: spin-round 80.5s linear infinite; */
}
img.redFlower {
  position: absolute;
  top: 0;
  right: 0;
}
.body-section div.intro#who {
  width: 100%;
  position: relative;
  overflow: hidden;
  /* box-shadow: -5px 18px 25px -15px; */
  transition: all 0.2s ease-out;
  cursor: pointer;
  -ms-interpolation-mode: nearest-neighbor;
  image-rendering: -moz-crisp-edges;
  image-rendering: pixelated;
  background-color: var(--old-keybord);
  background:
  radial-gradient(black 15%, transparent 16%) 0 0,
  radial-gradient(black 15%, transparent 16%) 8px 8px,
  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
  /* background-color:#282828; */
  background-size:16px 16px;
}
.body-section div.intro#who p.body-text {
  color: #ffffff;
}
/* ... */

